			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04m: *********************************

IMP/MAN: (5/11/06, GVG) NT-N-transistor in TSMC180

BUG: NCC. Insert print statements to help debug Bugzilla# 969, 977

BUG: (5/11/06, GVG) NullPointerException on delete area (Bug #982)
FIX: ERectangle instead of Rectangle2D

BUG: (5/11/06, GVG) ClassCastException in KeyBindingManager:inputMap (Bug 981)
FIX: There were some wrong casts to List<String> instead of Set<String> in KeyBindingManager.java

************************* Version 8.04k-8.04l: *********************************

BUG: (5/10/06, DN) Exception in EMenuItem.getDescription (Bug #973)
FIX: For toolbar buttons which are not registered in menu, getDescrioption returns text.

BUG: (5/10/06, DN) -mdi crashing (Bug #972)
FIX: In TopLevel.getMenuBars check for topLevel == null.

IMP: (5/9/06, GVG) Catching any type of exception while flusing preferences such as java.lang.SecurityException.
This tends to crash regressions if they can't save preferences.

IMP: (5/9/06, RK) NCC Regressions print out system properties so I can figure out what version of jvm was used to run the regressions

IMP: (5/9/06, RK) Print out execution times for Assura LVS

BUG: (5/9/06, DN) No accelerator nor dimmed status updates on MacOSX (Bug #968).
FIX: Reimplement EMenu classes to generate standard JMenu.

IMP: (5/8/06, GVG) DRC InMemory data doesn't require UpdateDataJob

NOTE: It is versio 8.04l since May 8, 2006

IMP: (5/7/06, DN) Exports in memory database have both creation name (id) and user name.
    Disk files will have id only since 8.04l. Library reader can read future files, but
    it continue to save in old format (user names).

IMP: (5/6/06, GVG) Window Cycle changes

IMP: (5/6/06, DN) Better diagnostics in JELIB reader in case of renamed/deleted export.
